--- a/conf/db_conf.ini
+++ b/conf/db_conf.ini
@@ -7,9 +7,9 @@ DB_PORT             = "3306"
 DB_NAME             = "asterisk"
 
 [omni-db]
-DB_USER             = "omni"
+DB_USER             = "asterisk"
 DB_PASSWORD         = "Test123!"
 DB_CONNECTION_TYPE  = "tcp"
-DB_SERVER_IP        = "localhost"
+DB_SERVER_IP        = "172.16.47.131"
 DB_PORT             = "3306"
 DB_NAME             = "omni"
